Minor correction alignement http://fr.piwigo.org/forum/viewtopic.php?id=17515
git-svn-id: http://piwigo.org/svn/trunk@5871 68402e56-0260-453c-a942-63ccdbb3a9ee

--- a/themes/Sylvia/theme.css
+++ b/themes/Sylvia/theme.css
@@ -198,7 +198,7 @@ BODY {
 }
 .content div.thumbnailCategory { 
 	background:transparent url(images/cat_bottom-left.gif) no-repeat scroll left bottom; 
-	padding: 0; 
+	padding: 0 0 2px; 
 	margin:0; 
 }
 .content .thumbnailCategory div.illustration { 
